[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.10.0"  # Use a versão mais recente compatível de Sycamore

[build-dependencies]
tauri-build = "1.0"  # Use a versão mais recente compatível do tauri-build

[dependencies.tauri]
version = "1.0"  # Use a versão mais recente compatível de Tauri
features = ["api-all"]  # Habilita todos os recursos da API do Tauri
